# timescaledb-toolkit

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .vsls.json  Cargo.toml  Changelog.md  LICENSE  NOTICE  Readme.md  bors.toml  docs  notes  statscale.control  temp.sql  timescale_analytics.control
.github/ISSUE_TEMPLATE/: bug-report.md  feature-stabilization.md  function-request.md  proposed-feature.md  proposed-solution.md  wishlist-item.md
.github/workflows/: add-to-bugs-board.yml  ci.yml  ci_image_build.yml  clippy.yml  clippy_rustfmt.yml  deb.yml  dependency-updates.yml  nightly.yml  nightly_build.yml  packaging.yml  patch_build.yml  release.yml  report_packaging_failures.yml  reportpackagingfailures.yml
crates/aggregate_builder/: Cargo.toml  Readme.md
crates/aggregate_builder/src/: aggregate.rs  combine.rs  lib.rs
crates/asap/: Cargo.toml
crates/asap/src/: fft.rs  lib.rs
crates/count-min-sketch/: Cargo.toml
crates/count-min-sketch/src/: lib.rs
crates/count-min-sketch/tests/: lib.rs
crates/counter-agg/: Cargo.toml
crates/counter-agg/src/: lib.rs  range.rs  regr.rs  regression.rs  stable.rs  tests.rs
crates/encodings/: Cargo.toml
crates/encodings/src/: lib.rs
crates/flat_serialize/: LICENSE  LICENSE.apache  LICENSE.mit  NOTICE  Readme.md  example_generated.rs
crates/flat_serialize/flat_serialize/: Cargo.toml
crates/flat_serialize/flat_serialize_macro/: Cargo.toml
crates/flat_serialize/flat_serialize_macro/src/: lib.rs  parser.rs
crates/forecast/: Cargo.toml
crates/forecast/src/: lib.rs  main.rs  triple.rs
crates/hyperloglog/: Cargo.toml
crates/hyperloglog/src/: hyperloglog_data.rs  lib.rs
crates/hyperloglogplusplus/: Cargo.toml
crates/hyperloglogplusplus/src/: dense.rs  hyperloglog_data.rs  lib.rs  registers.rs  sparse.rs
crates/hyperloglogplusplus/src/sparse/: varint.rs
crates/regr/: Cargo.toml
crates/regr/src/: lib.rs
crates/scripting-utilities/: Readme.md
crates/spacesaving/: Cargo.toml
crates/spacesaving/src/: lib.rs
crates/stats-agg/: Cargo.toml
crates/stats-agg/src/: lib.rs  stats1d.rs  stats2d.rs
crates/stats-agg/src/stats2d/: stats2d_flat_serialize.rs
crates/t-digest/: Cargo.toml
crates/t-digest-lib/: Cargo.toml
crates/t-digest/src/: lib.rs
crates/time-series/: Cargo.toml
crates/time-series/src/: lib.rs
crates/time-weighted-average/: Cargo.toml  rustfmt.toml
crates/time-weighted-average/src/: lib.rs  tspoint.rs
crates/tspoint/: Cargo.toml
crates/udd-sketch/: Cargo.toml  log  mymalloc.c
docker/: Dockerfile  README.md
docker/ci/: Dockerfile  setup.sh
docker/nightly/: Dockerfile
docker/patch/: Dockerfile
docs/: README.md  asap.md  client.md  counter_agg.md  exponential_smoothing.md  exponential_smoothing_aggregate.org  forecast.md  funnel.md  gauge_agg.md  heartbeat_agg.md  hyperloglog.md  lttb.md  ohlc.md  ordered-aggregates.md  percentile_approximation.md  release.md  rolling_average_api_working.md  safe_aggregates.md  state_agg.md  stats_agg.md  tdigest.md  template.md  test_caggs.md  test_candlestick_agg.md  time_weighted_average.md  timeseries.md  timeseries_pipeline_elements.md  topn.md  two-step_aggregation.md  uddsketch.md
docs/examples/: tdigest.c  tdigest.py
extension/: Cargo.toml  timescale_analytics.control  timescaledb_toolkit.control
extension/docs/: README.md  asap.md  counter_agg.md  hyperloglog.md  lttb.md  percentile_approximation.md  tdigest.md  tdigest_api.md  time_weighted_average.md  two-step_aggregation.md  uddsketch.md
extension/sql/: aggregates.sql  grant_usage.sql  load-order.txt  types.sql
extension/src/: accessors.rs  aggregate_builder_tests.rs  aggregate_utils.rs  asap.rs  candlestick.rs  counter_agg.rs  countminsketch.rs  datum_utils.rs  duration.rs  forecast.rs  frequency.rs  funnel_aggregate.rs  gauge_agg.rs  gen_random_timeseries.rs  heartbeat_agg.rs  hyperloglog.rs  lib.rs  lttb.rs  nmost.rs  ohlc.rs  palloc.rs  pg_any_element.rs  range.rs  raw.rs  saturation.rs  schema_test.rs  serialization.rs  stabilization_info.rs  stabilization_tests.rs  state_aggregate.rs  stats_agg.rs  tdigest.rs  time_series.rs  time_vector.rs  time_weighted_average.rs  topn.rs  triggers.rs  type_builder.rs  uddsketch.rs  utilities.rs  (+1 more)
extension/src/accessors/: tests.rs
extension/src/counter_agg/: accessors.rs
extension/src/heartbeat_agg/: accessors.rs
extension/src/nmost/: max_by_float.rs  max_by_int.rs  max_by_time.rs  max_float.rs  max_int.rs  max_time.rs  min_by_float.rs  min_by_int.rs  min_by_time.rs  min_float.rs  min_int.rs  min_time.rs
extension/src/serialization/: collations.rs  functions.rs  types.rs
extension/src/state_aggregate/: accessors.rs  rollup.rs
extension/src/time_series/: iter.rs  pipeline.rs
extension/src/time_series/pipeline/: aggregation.rs  arithmetic.rs  delta.rs  expansion.rs  fill_holes.rs  fill_to.rs  filter.rs  lambda.rs  map.rs  resample_to_rate.rs  sort.rs
extension/src/time_series/pipeline/lambda/: executor.rs  lambda_expr.pest  parser.rs
extension/src/time_vector/: iter.rs  pipeline.rs
extension/src/time_vector/pipeline/: aggregation.rs  arithmetic.rs  delta.rs  expansion.rs  fill_to.rs  filter.rs  lambda.rs  map.rs  resample_to_rate.rs  sort.rs
extension/src/time_vector/pipeline/lambda/: executor.rs  parser.rs
extension/src/time_weighted_average/: accessors.rs
sql/: aggregates.sql  load-order.txt  tdigest.generated.sql  types.sql
src/: aggregate_utils.rs  lib.rs  palloc.rs  tdigest.rs  type_builder.rs
tests/update/: candlestick.md  heartbeat.md  original_update_tests.md  state_agg.md  time-vector.md  time-weighted-average.md
tools/: build  dependencies.sh  gharun  install-timescaledb  make-upgrade-script.sh  release  testbin
tools/post-install/: Cargo.toml
tools/sql-doctester/: Cargo.toml  Readme.md
tools/sql-doctester/src/: main.rs  parser.rs  runner.rs  startup.sql
tools/testrunner/: Cargo.toml
tools/update-tester/: Cargo.toml  Readme.md
tools/update-tester/src/: installer.rs  main.rs  parser.rs  testrunner.rs
tools/update-tester/src/testrunner/: stabilization.rs
(+16 files in other folders)
