[workspace]
resolver = "2"

members = [
    "extension",
    "crates/encodings",
    "crates/flat_serialize/flat_serialize_macro",
    "crates/flat_serialize/flat_serialize",
    "crates/t-digest",
    "crates/hyperloglog",
    "crates/hyperloglogplusplus",
    "crates/udd-sketch",
    "crates/time-weighted-average",
    "tools/post-install",
    "tools/sql-doctester",
    "tools/testrunner",
    "crates/asap",
    "crates/counter-agg",
    "crates/time-series",
    "crates/stats-agg",
    "crates/aggregate_builder"
]

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
debug = true
codegen-units = 1
