[workspace]
resolver = "2"

members = [
    "extension",
    "crates/encodings",
    "crates/flat_serialize/flat_serialize_macro",
    "crates/flat_serialize/flat_serialize",
    "crates/t-digest",
    "crates/hyperloglog",
    "crates/hyperloglogplusplus",
    "crates/udd-sketch",
    "crates/time-weighted-average",
    "tools/post-install",
    "tools/sql-doctester",
    "tools/testrunner",
    "tools/update-tester",
    "crates/asap",
    "crates/counter-agg",
    "crates/tspoint",
    "crates/stats-agg",
    "crates/aggregate_builder",
    "crates/scripting-utilities/*",
    "crates/count-min-sketch",
]

[profile.release]
lto = "fat"
debug = true
codegen-units = 1
