[package]
name = "timescaledb_toolkit"
version = "1.13.0-dev"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg14"]
pg12 = ["pgx/pg12", "pgx-tests/pg12"]
pg13 = ["pgx/pg13", "pgx-tests/pg13"]
pg14 = ["pgx/pg14", "pgx-tests/pg14"]
pg15 = ["pgx/pg15", "pgx-tests/pg15"]
pg_test = ["approx"]

[dependencies]
# Keep synchronized with `cargo install --version N.N.N cargo-pgx` in Readme.md and docker/ci/Dockerfile
# Also `pgx-tests` down below in `dev-dependencies`.
pgx = "=0.6.1"
pgx-macros = "=0.6.1"
encodings = {path="../crates/encodings"}
flat_serialize = {path="../crates/flat_serialize/flat_serialize"}
flat_serialize_macro = {path="../crates/flat_serialize/flat_serialize_macro"}
tdigest = {path="../crates/t-digest"}
hyperloglogplusplus = {path="../crates/hyperloglogplusplus"}
uddsketch = {path="../crates/udd-sketch"}
counter-agg = {path="../crates/counter-agg"}
stats_agg = {path="../crates/stats-agg"}
time_weighted_average = {path="../crates/time-weighted-average"}
tspoint = {path="../crates/tspoint"}
asap = {path="../crates/asap"}
countminsketch = {path="../crates/count-min-sketch"}

aggregate_builder = {path="../crates/aggregate_builder"}

approx = {version = "0.4.0", optional = true}
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.8.0"
ordered-float = {version = "1.0", features = ["serde"] }
paste = "1.0"
rand = { version = "0.8.3", features = ["getrandom", "small_rng"] }
rand_distr = "0.4.0"
rand_chacha = "0.3.0"
ron="0.6.0"
tera = { version = "1.17.0", default-features = false }
twofloat = { version = "0.6.0", features = ["serde"] }
num-traits = "0.2.15"

pest = "=2.3.0"
pest_derive = "=2.3.0"

spfunc = "0.1.0"
statrs = "0.15.0"

[dev-dependencies]
pgx-tests = "=0.6.1"
approx = "0.4.0"
