[package]
name = "timescaledb_toolkit"
version = "1.24.0-dev"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg18"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = ["approx"]

[dependencies]
# Keep synchronized with `cargo install --version N.N.N cargo-pgrx` in Readme.md and docker/ci/Dockerfile
# Also `pgrx-tests` down below in `dev-dependencies`.
pgrx = "=0.19.1"
pgrx-macros = "=0.19.1"
pgrx-sql-entity-graph = "=0.19.1"
encodings = {path="../crates/encodings"}
flat_serialize = {path="../crates/flat_serialize/flat_serialize"}
flat_serialize_macro = {path="../crates/flat_serialize/flat_serialize_macro"}
tdigest = {path="../crates/t-digest"}
hyperloglogplusplus = {path="../crates/hyperloglogplusplus"}
uddsketch = {path="../crates/udd-sketch"}
counter-agg = {path="../crates/counter-agg"}
stats_agg = {path="../crates/stats-agg"}
time_weighted_average = {path="../crates/time-weighted-average"}
tspoint = {path="../crates/tspoint"}
asap = {path="../crates/asap"}
countminsketch = {path="../crates/count-min-sketch"}

aggregate_builder = {path="../crates/aggregate_builder"}

approx = {version = "0.5.1", optional = true}
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.21.0"
ordered-float = {version = "5.3", features = ["serde"] }
paste = "1.0"
rand = { version = "0.10.1", features = ["sys_rng"] }
rand_distr = "0.6.0"
rand_chacha = "0.10.0"
ron="0.12.1"
tera = { version = "1.20.1", default-features = false }
twofloat = { version = "0.8.4", features = ["serde"] }
num-traits = "0.2.15"

pest = "=2.8.6"
pest_derive = "=2.8.6"

spfunc = "0.1.0"
statrs = "0.18.0"

[dev-dependencies]
pgrx-tests = "=0.19.1"
approx = "0.5.1"
