[package]
name = "counter-agg"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { package = "serde", version = "1.0", optional = false, default-features = false }
time_weighted_average = {path="../time-weighted-average", features = ["use_serde"]}
