[package]
name = "counter-agg"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flat_serialize = {path="../flat_serialize/flat_serialize"}
flat_serialize_macro = {path="../flat_serialize/flat_serialize_macro"}
serde = { version = "1.0", features = ["derive"] }
stats_agg = {path="../stats-agg"}
time_series = {path="../time-series"}

[dev-dependencies]
approx = "0.4.0"