[package]
name = "hyperloglogplusplus"
version = "0.1.0"
edition = "2018"

[dependencies]
arrayvec = { version = "0.5.2", features = ["array-sizes-33-128"] }
serde = { version = "1.0", features = ["derive"] }
encodings = { path="../encodings" }

[dev-dependencies]
fnv = "1.0.3"
quickcheck = "1"
quickcheck_macros = "1"

[features]
default = []
flaky_tests = []