[package]
name = "spacesaving"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rand = { version = "0.8.3", features = ["small_rng"] }
zipf = "7.0.0"
