[package]
name = "stats_agg"
version = "0.1.0"
authors = ["davidkohn88 <david@timescale.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flat_serialize = {path="../flat_serialize/flat_serialize"}
flat_serialize_macro = {path="../flat_serialize/flat_serialize_macro"}
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
approx = "0.4.0"