[package]
name = "tdigest"
version = "0.2.2"
edition = "2018"
# based on: https://github.com/MnO2/t-digest"

[dependencies]
flat_serialize = {path="../flat_serialize/flat_serialize"}
flat_serialize_macro = {path="../flat_serialize/flat_serialize_macro"}
ordered-float = {version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
