[package]
name = "tdigest"
version = "0.2.2"
edition = "2021"
# based on: https://github.com/MnO2/t-digest"

[dependencies]
flat_serialize = {path="../flat_serialize/flat_serialize"}
flat_serialize_macro = {path="../flat_serialize/flat_serialize_macro"}
ordered-float = {version = "5.3", features = ["serde"] }
ron = "0.12.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
