[package]
name = "sql-doctester"
version = "0.1.0"
edition = "2021"

[dependencies]
bytecount = "0.6.2"
clap = { version = "4.6.1", features = ["wrap_help"] }
colored = "3.1.1"
postgres = "=0.19.14" # pinned because we pin tokio-postgres
pulldown-cmark = "0.13.4"
rayon = "1.5"
tokio-postgres = "=0.7.18" # pinned because 0.7.11 added `SimpleQueryMessage::RowDescription`
uuid = { version = "1.23.3", features = ["v4"] }
walkdir = "2"
