[package]
name = "update-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
control_file_reader = {path = "../../crates/scripting-utilities/control_file_reader"}
postgres_connection_configuration = {path = "../../crates/scripting-utilities/postgres_connection_configuration"}

colored = "2.0.0"
clap = { version = "2.33", features = ["wrap_help"] }
postgres = "0.19.1"
xshell = "0.1.14"
